@@ -12,4 +12,4 @@ add_executable(cupt.bin
 target_link_libraries(cupt.bin cupt2 boost_program_options)
 add_precompiled_header(cupt.bin)
 
-install(PROGRAMS cupt.bin DESTINATION bin RENAME cupt-experimental)
+install(PROGRAMS cupt.bin DESTINATION bin RENAME cupt)
