@@ -10,7 +10,7 @@ Standards-Version: 3.9.1
 Vcs-Git: git://github.com/jackyf/cupt.git
 Vcs-Browser: https://github.com/jackyf/cupt/tree/develop
 
-Package: libcupt2-0-experimental
+Package: libcupt2-0
 Architecture: any
 Depends: ${misc:Depends}, ${shlibs:Depends}
 Breaks: debdelta (<< 0.31)
@@ -30,29 +30,28 @@ Description: alternative front-end for dpkg -- runtime library
   - problem resolver;
   - worker for modifying system state.
  .
- See also description of 'cupt-experimental' package for more information.
+ See also description of 'cupt' package for more information.
 
-Package: libcupt2-dev-experimental
+Package: libcupt2-dev
 Architecture: any
-Depends: ${misc:Depends}, libcupt2-0-experimental (= ${binary:Version})
-Suggests: libcupt2-doc-experimental
+Depends: ${misc:Depends}, libcupt2-0 (= ${binary:Version})
+Suggests: libcupt2-doc
 Description: arternative front-end for dpkg -- development files
  This package provides headers for Cupt library.
  .
- See also description of libcupt2-0-experimental package.
+ See also description of libcupt2-0 package.
 
-Package: libcupt2-doc-experimental
+Package: libcupt2-doc
 Architecture: all
 Depends: ${misc:Depends}
 Description: alternative front-end for dpkg -- library documentation
  This package provides documentation for Cupt library.
  .
- See also description of libcupt2-0-experimental package.
+ See also description of libcupt2-0 package.
 
-Package: cupt-experimental
+Package: cupt
 Architecture: any
-Depends: ${misc:Depends}, ${shlibs:Depends},
-  libcupt2-0-experimental (>= ${binary:Version})
+Depends: ${misc:Depends}, ${shlibs:Depends}, libcupt2-0 (>= ${binary:Version})
 Suggests: sensible-utils, libreadline6
 Description: alternative front-end for dpkg -- console interface
  This package provides a console interface to Cupt library, which is a
@@ -87,7 +86,7 @@ Description: arternative front-end for dpkg -- libcurl download method
  This package provides http(s) and ftp download handlers for Cupt library
  using libcurl.
  .
- See also description of libcupt2-0-experimental package.
+ See also description of libcupt2-0 package.
 
 Package: libcupt2-0-downloadmethod-wget
 Architecture: any
@@ -96,4 +95,4 @@ Description: arternative front-end for dpkg -- wget download method
  This package provides http(s) and ftp download handlers for Cupt library
  using wget.
  .
- See also description of libcupt2-0-experimental package.
+ See also description of libcupt2-0 package.
