@@ -1,2 +1,2 @@
-usr/doc/* usr/share/doc/libcupt2-doc-experimental
+usr/doc/* usr/share/doc/libcupt2-doc
 # usr/share | do not install man pages (at least for now)
