@@ -7,10 +7,10 @@ override_dh_auto_configure:
 
 override_dh_auto_install:
 	$(MAKE) install
-	chrpath --delete $(CURDIR)/debian/tmp/usr/bin/cupt-experimental
+	chrpath --delete $(CURDIR)/debian/tmp/usr/bin/cupt
 	# produce additional man pages for cupt
 	$(PERL) debian/install_pods
-	install -m644 scripts/bash_completion $(CURDIR)/debian/cupt-experimental/etc/bash_completion.d/cupt-experimental
+	install -m644 scripts/bash_completion $(CURDIR)/debian/cupt/etc/bash_completion.d/cupt
 
 %:
 	dh $@
