@@ -38,6 +38,7 @@ cupt (2.0.0~beta2~) UNRELEASED; urgency=low
         was introduced in 2.0.0~alpha1.
   * debian:
     - changelog, control: source package is back to 'cupt' from 'cupt2'.
+    - *: removed the suffix '-experimental' from binary package names.
 
  -- Eugene V. Lyubimkin <jackyf@debian.org>  Sun, 07 Mar 2011 12:09:47 +0200
 
